[project]
name = "iconkeep"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
iconkeep = "iconkeep.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iconkeep"]

[tool.hatch.build.targets.sdist]
include = ["iconkeep", "README.md", "pyproject.toml"]
